--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>com.uglyeagle</groupId>
     <artifactId>clojure-maven-project</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
